# qpasswd

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md
src/: crypt.rs  gen.rs  gui.rs  lib.rs  main.rs
