[package]
name = "qpasswd"
version = "0.4.0"
authors = ["osk <tgv.alpha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iced = "0.3"
bishop = "0.2.0"
rand = {version = "0.8.3", features = ["getrandom"]}
rand_core = "0.6.0"
rust-crypto = "0.2.36"
base64 = "0.13.0"
structopt = "0.3.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
